<resources>
    <string name="app_name">AjaxApp</string>
    <string name="msg_network_is_not_available">Network is not available</string>
    <string name="title_welcome">Welcome</string>
    <string name="title_login">LOGIN</string>
    <string name="title_sign_up">Sign up</string>
    <string name="txt_login_with_social_media">or login with social media account</string>
    <string name="txt_facebook">Facebook</string>
    <string name="txt_instagram">Instagram</string>
    <string name="btn_skip">Skip</string>
</resources>
