<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="onClick" type="android.view.View.OnClickListener"/>
    </data>
    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:background="@color/bg_app"
            android:layout_width="match_parent" android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title_welcome"
                android:id="@+id/tv_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textAllCaps="true"
                style="@style/Title_H1"/>
        <android.support.v7.widget.AppCompatImageView
                android:layout_width="75dp"
                android:src="@drawable/ic_logo_ajax"
                android:layout_marginTop="64dp"
                android:id="@+id/ic_logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                android:layout_height="96dp"/>

        <RelativeLayout
                android:layout_width="0dp" android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_logo"
                android:id="@+id/btn_login"
                android:onClick="@{onClick}"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:background="@drawable/bg_btn_round_violet"
                android:layout_marginTop="36dp">

            <TextView
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:text="@string/title_login"
                    android:gravity="center"
                    android:padding="16dp"
                    style="@style/Title_H4"/>
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="0dp" android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_login"
                android:id="@+id/btn_sign_up"
                android:onClick="@{onClick}"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:background="@drawable/bg_btn_round_red"
                android:layout_marginTop="16dp">
            <TextView
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:text="@string/title_sign_up"
                    android:gravity="center"
                    android:padding="16dp"
                    style="@style/Title_H4"/>
        </RelativeLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_login_with_social_media"
                android:gravity="center"
                android:id="@+id/tv_login_with_social_media"
                app:layout_constraintTop_toBottomOf="@+id/btn_sign_up"
                android:layout_marginTop="24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                style="@style/Title_H4"/>


        <LinearLayout android:layout_width="0dp"
                      android:orientation="horizontal"
                      android:layout_marginStart="40dp"
                      android:layout_marginLeft="40dp"
                      android:layout_marginRight="40dp"
                      android:layout_marginEnd="40dp"
                      android:gravity="center_vertical"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintRight_toRightOf="parent"
                      app:layout_constraintTop_toBottomOf="@+id/tv_login_with_social_media"
                      android:layout_marginTop="16dp"
                      android:id="@+id/btn_facebook"
                      android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/btn_login_facebook"
                    android:onClick="@{onClick}"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                <RelativeLayout android:layout_width="45dp"
                                android:layout_height="45dp"
                                android:background="@drawable/bg_btn_circle_violet">
                    <android.support.v7.widget.AppCompatImageView
                            android:layout_width="8dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/ic_logo_fb"
                            android:layout_height="16dp"/>
                </RelativeLayout>

                <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:text="@string/txt_facebook"
                        android:textColor="@android:color/white"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:textSize="15sp"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{onClick}"
                    android:id="@+id/btn_login_instagram"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                <RelativeLayout
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:background="@drawable/bg_btn_circle_violet">
                    <android.support.v7.widget.AppCompatImageView
                            android:layout_width="16dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/ic_logo_instagram"
                            android:layout_height="16dp"/>
                </RelativeLayout>

                <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:text="@string/txt_instagram"
                        android:textColor="@android:color/white"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:textSize="15sp"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>


        <android.support.v7.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:alpha="0.3"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/bg_bottom_logo"/>

        <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="40dp"
                android:textColor="@android:color/white"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingRight="40dp"
                android:paddingEnd="40dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:textSize="16sp"
                android:id="@+id/btn_skip"
                android:text="@string/btn_skip"
                android:layout_height="wrap_content"/>

    </android.support.constraint.ConstraintLayout>
</layout>